--- a/pcapac16/WEPOPRPO21_vaca/WEPOPRPO21.tex
+++ b/pcapac16/WEPOPRPO21_vaca/WEPOPRPO21.tex
@@ -15,11 +15,12 @@
 \begin{abstract}
 A virtual accelerator is being developed for Sirius, the new 4th generation synchrotron light source being built in Campinas, Brazil\cite{sirius_status}.
 The virtual accelerator is an on-line beam simulator which is integrated into EPICS control system.
-It consists on a command line interface server with a channel access (CA) layer and with an in-house developed tracking code library written in C++ for efficiency purpose.
-The purpose of such server is to facilitate early development and testing of high level applications for the control system.
+It consists of a command line interface server with a channel access (CA) layer and with an in-house developed tracking code library written in C++ for efficiency purpose.
+The aim of such server is to facilitate early development and testing of high level applications for the control system.
 \end{abstract}
 
 \section{INTRODUCTION}
+
 Sirius, the new storage ring at the Brazilian Synchrotron Light Laboratory (LNLS), will use EPICS as its control system.
 Most of the development of the high level applications (HLAs) will take place next year and will be conducted by the accelerator physics group.
 In the meanwhile, a few client applications have already been implemented to allow analysis of the choices in software development frameworks\cite{sirius_hla} that were made.
@@ -27,23 +28,24 @@ In the meanwhile, a few client applications have already been implemented to all
 To be able to test and integrate the above-mentioned HLAs in the control system (CS), it was decided that a virtual accelerator (VA) with channel access server layer (CAS) for EPICS should be developed, implemented and made available as soon as possible.
 The idea is that having a VA allows for early development of control system software, be it for input-output controllers (IOCs) or HLAs.
 
-The VA implements functionalities that can provide simulated process variables (PVs) on the CS that have not been made available yet, thus creating a mock-up CS environment in which early software development is possible.
+The VA implements functionalities that can provide si\-mu\-la\-ted process variables (PVs) on the CS that have not been made available yet, thus creating a mock-up CS environment in which early software development is possible.
 This test environment with VA also has the potential to speed up project development by partially parallelizing implementations of applications that consume data from each other.
 
 Commissioning training is also possible using HLAs in the control system provided with the virtual accelerator.
 
 \section{VIRTUAL ACCELERATOR}
+
 From the onset it was decided that the virtual accelerator would be composed of two parts: the first, a back-end machine
 application implementing a simulated virtual accelerator with a channel access server layer (VACA) and the second, a set of
-virtual IOCs (vIOCS) which is the front-end that other CS applications are supposed to interact with.
+front-end virtual IOCs (vIOCS) with which other CS applications are supposed to interact.
 
-Accelerator properties such as beam current, position and injection losses, power supply and RF subsystem setpoints,
-and so on, are simulated nominally in VACA. The virtual IOCS, on the other hand, encapsulate all PVs that represent the
-interface between the VA and the rest of the CS. It also adds simulated fluctuations to accelerator properties and implements
-device-depent parameters, such as excitation curves of the magnets or BPM calibration parameters.
+Accelerator properties such as beam current and position, injection losses, power supply and RF subsystem setpoints,
+and so on, are simulated nominally in VACA. 
+The virtual IOCS, on the other hand, encapsulate all PVs that represent the interface between the VA and the rest of the CS. 
+They also add simulated fluctuations to accelerator properties and implement device-depent parameters, such as excitation curves of the magnets or BPM calibration parameters.
 
 The advantage of this approach is that virtual IOCs can be gradually replaced by their corresponding real IOCs when they become
-available, and without having to rewrite simulation code since it is implemented separately in VACA.
+available, and without having to modify core simulation code, since it is implemented separately in VACA.
 
 \begin{figure}[!htb]
 %   \vspace*{-.5\baselineskip}
@@ -58,49 +60,50 @@ available, and without having to rewrite simulation code since it is implemented
 
 The virtual accelerator with channel access is written in Python3.
 The choice of a high level programming language allows for rapid development of the intricate functionalities the virtual accelerator has to provide.
-Python language works as a binding layer between the two main core modules: a CA server and a tracking code for simulations.
-The python package PCasPy\cite{pcaspy} is used as the CA server module.
+Python language works as a binding layer between the two main core modules: the CA server and the tracking simulation code.
+The Python package PCASPy\cite{pcaspy} is used to write the CA server module.
 PVs implemented in VACA have a prefix "VA-" indicating that they represent virtual process variables.
-For the simulation module, a library called trackcpp\cite{trackcpp}, that has been developed at LNLS by the accelerator physics group, was reused.
+For the simulation module, a library called trackcpp\cite{trackcpp}, that has been developed at LNLS by the accelerator physics group staff, was reused.
 It is a C++ library of beam dynamics calculations and tracking routines closely based on, and tested against, Tracy\cite{tracy} and Matlab AT\cite{at} passmethods.
-This library is converted to a python package using Swig3.0\cite{swig}, thus conveying fast and optimized routines that can be called within Python.
+This library is converted to a python package using Swig3.0\cite{swig}, thus conveying fast and optimized routines that can be conveniently called within Python.
 
 Figure \ref{fig:screen_print} is a screen print of a command line terminal showing a running instance of VACA with its banner
 and useful information printout.
-It shows the number of virtual PVs implemented for each subsystem, labeled here SI,BO,LI,TB,TS.
-It also displays the current model version for each subsystem, as well as messages indicating that initial calculations are finished,
+It shows the number of virtual PVs implemented for each major accelerator subsystem, labeled here SI,BO,LI,TB,TS.
+Also displayed are current model versions for all subsystems, as well as messages indicating that initial calculations are finished,
 such as those needed to simulate injection efficiency, for example.
 At last in the display, a message indicating that VACA is ready to respond to virtual PV queries.
 
 
 \section{vIOCS}
 
-The other part of the virtual accelerator is the set of virtual IOCs that respond to PVs with actual names in the control system.
+The other part of the virtual accelerator is the set of virtual IOCs that respond to PVs with actual the control system names.
 So far a few vIOCS have been implemented:
 \begin{itemize}
-\item \verb|si_bpm|,\verb|bo_bpm|,\verb|ts_bpm|,\verb|tb_bpm|: they serve BPM positions that are read from VACA, adding emulated measurement fluctuations.
+\item \verb|si_bpm|, \verb|bo_bpm|, \verb|ts_bpm|, \verb|tb_bpm|: they serve BPM positions for all subsystems that are read from VACA, adding emulated measurement fluctuations.
 \item \verb|si_current|, \verb|bo_current|: they provide simulated beam currents with fluctuations. Touschek, elastic and inelastic simulated lifetimes are affected by variations of associated parameters such as RF gap voltage and reduced acceptance due to closed orbit variations.
 \item \verb|si_ps|,\verb|bo_ps|,\verb|ts_ps|,\verb|tb_ps|: provide read/write access to PVs that correspond to power supplies with associated magnet excitation curves.
 \item \verb|si_rf|,\verb|bo_rf|: implement radio frequency process variables.
 \item \verb|si_tune|: emulation of the tune measurement IOC.
 \item \verb|si_beamsize, bo_beamsize|: emulation of beam size measurement IOC.
+\item \verb|si_lifetime|: emulation of lifetime calculatio IOC.
 \end{itemize}
-These VIOCS are written using database records distributed with EPICS base.
+Most of these vIOCS are written using database records that are distributed with EPICS base.
+\verb|si_lifetime|, on the other hand, is implemented with PCASPy.
 
 \section{CONCLUSIONS}
 
 The virtual accelerator described here has been an invaluable asset for the development of high level applications, as described in Ref.\cite{sirius_hla}.
-The core of the HLA development is planned to take place in 2017, mainly the accelerator physics group staff. This development will certainly benefit from having a VA system available.
-At this point, simulation of basic beam processes are implemented.
-For example, VACA now properly simulates processes such as: parameter-dependent current decays, closed-orbit control with dipolar correctors, beam optics variations with quadrupoles,
-injection that depends on the magnet configurations.
-In the future more functionalities and modifications should be added to VA:
+The core of the HLA development is planned to take place in 2017, mainly by the accelerator physics group staff. This development will certainly benefit from having a VA system available.
+At this point simulation of basic beam processes are implemented.
+VACA now properly simulates processes such as: parameter-dependent current decays, closed-orbit control with dipolar correctors, beam optics variations with quadrupoles, injection and ejection that depend on magnet and timming configurations.
+In the future more functionalities and modifications should be added to VA, such as
 \begin{itemize}
-\item Details of the pulsed signals during injection and ejection processes need be considered.
-\item Approximate coupling expressions for beam size estimates should be substituted by Ohmi's envelop formalism\cite{ohmi} in trackcpp,
-\item A cleaner separation between VACA and vIOCS is in order. At this points a few excitation curves are implemented in VACA since it has not been decied yet where they will finally be located in the CS. They can either be moved to the IOCs, in case they should be moved to the vIOCS for the VA, or moved to some configuration database service.
+\item Timing details of the pulsed signals during injection and ejection processes need be considered.
+\item Approximate coupling expressions now used for beam size estimates should be replaced with more rigorous Ohmi's beam envelop formalism\cite{ohmi} in trackcpp,
+\item A cleaner separation between VACA and vIOCS is in order. At this points a few excitation curves are implemented in VACA since it has not been decied yet where they will finally be located in the CS. They can either be stored in the corresponding power supply IOCs -- in which case they should be moved to the vIOCS for the VA, or stored in some configuration database service.
 \item Considerations on moving from EPICS database records PCASPy for vIOCS developments. This may simplify the process of writing and deploying applications.
-\item Recently a few DISCS\cite{discs} services have been adopted. In particular, the use of its naming service allowed for a standardization of how to name devices and PVs. A major revision of PV names has taken place recently. VA should be modified to contemplate the new PV name standard.
+\item Recently a few DISCS\cite{discs} services have been adopted. In particular, the use of its naming service module allowed for a standardization of how devices and PVs are named. As a consequence, a major revision of PV names has taken place recently. VA should be updated to contemplate the new PV naming standard.
 \end{itemize}
 
 \begin{thebibliography}{99}
