--- a/pcapac16/WEPOPRPO21_vaca/WEPOPRPO21.tex
+++ b/pcapac16/WEPOPRPO21_vaca/WEPOPRPO21.tex
@@ -15,8 +15,8 @@
 \begin{abstract}
 A virtual accelerator is being developed for Sirius, the new 4th generation synchrotron light source being built in Campinas, Brazil\cite{sirius_status}.
 The virtual accelerator is an on-line beam simulator which is integrated into EPICS control system.
-It consists of a command line interface server with a channel access (CA) layer and with an in-house developed tracking code library written in C++ for efficiency purpose.
-The aim of such server is to facilitate early development and testing of high level applications for the control system.
+It consists of a command line interface server with a channel access (CA) layer and with an in-house developed tracking code library written in C++ for efficiency gain.
+The purpose of such server is to facilitate early development and testing of high level applications for the control system.
 \end{abstract}
 
 \section{INTRODUCTION}
