--- a/pcapac16/WEPOPRPO22_hla/Poster/WEPOPRPO22poster.tex
+++ b/pcapac16/WEPOPRPO22_hla/Poster/WEPOPRPO22poster.tex
@@ -53,6 +53,17 @@
 						\end{figure}
 					\end{myblock}
 					\begin{myblock}{Top-up Injection}
+						\textbf{Implemented functionalities}
+						%\begin{itemize}
+							%\item \textbf{}.
+							%\item \textbf{}.
+						%\end{itemize}
+						\vspace{0.5cm}
+						\begin{figure}
+							\centering
+							\includegraphics[width=0.7\textwidth]{../WEPOPRPO22f4.png}
+							\caption{Top-up injection display application developed with PyQt.}
+						\end{figure}
 					\end{myblock}\vfill
 		}\end{minipage}\end{beamercolorbox}
 	\end{column}
