--- a/pcapac16/WEPOPRPO22_hla/WEPOPRPO22.tex
+++ b/pcapac16/WEPOPRPO22_hla/WEPOPRPO22.tex
@@ -110,7 +110,7 @@ Some prototypes were built on these platforms listed before to help the develope
 \input{lifetime.tex}
 \FloatBarrier
 
-%\input{topup.tex}
+\input{topup.tex}
 %\FloatBarrier
 
 
@@ -177,6 +177,9 @@ The authors would like to thank L. M. Russo from the Diagnostics group for fruit
 	 	"Real time monitoring of LEP beam currents and lifetimes",
 	 	in \emph{Proc. EPAC'94},
 	 	London, England, pp. 1716-1718.
+	 	
+	 \bibitem{pyepics}
+		PyEpics, \url{http://cars9.uchicago.edu/software/python/pyepics3/}
 
 \end{thebibliography}
 
