Update WEPOPRPO22 Poster

--- a/pcapac16/WEPOPRPO21_vaca/WEPOPRPO21.tex
+++ b/pcapac16/WEPOPRPO21_vaca/WEPOPRPO21.tex
@@ -102,7 +102,7 @@ In the future more functionalities and modifications should be added to VA, such
 \item Timing details of the pulsed signals during injection and ejection processes need be considered.
 \item Approximate coupling expressions now used for beam size estimates should be replaced with more rigorous Ohmi's beam envelop formalism\cite{ohmi} in trackcpp,
 \item A cleaner separation between VACA and vIOCS is in order. At this points a few excitation curves are implemented in VACA since it has not been decided yet where they will finally be located in the CS. They can either be stored in the corresponding power supply IOCs -- in which case they should be moved to the vIOCS for the VA, or stored in some configuration database service.
-\item Considerations on moving from EPICS database records PCASPy for vIOCS developments. This may simplify the process of writing and deploying applications.
+\item Considerations on moving from EPICS  database  records PCASPy for vIOCS developments. This may simplify the process of writing and deploying  applications.
 \item Recently a few DISCS\cite{discs} services have been adopted. In particular, the use of its naming service module allowed for a standardisation of how devices and PVs are named. As a consequence, a major revision of PV names has taken place recently. VA should be updated to contemplate the new PV naming standard.
 \end{itemize}
 
@@ -124,7 +124,8 @@ paper WEPOPRPO22, this conference.
 
 \bibitem{pcaspy}
 PCASpy - EPICS Portable Channel Access Server python package.
-Documentation at \url{http://pcaspy.readthedocs.io/en/latest/}
+Documentation at \\
+\url{http://pcaspy.readthedocs.io/en/latest/}
 
 \bibitem{trackcpp}
 LNLS Accelerator Physics Group,
@@ -152,11 +153,11 @@ K. Ohmi, K. Hirata, K. Oide,
 Phys. Rev. E 49, 751 (1994).
 
 \bibitem{discs}
-  V. Vuppala \emph{et al.},
-  "Distributed Information Services for Control Systems",
-  in \emph{Proc. ICALEPCS'2013},
-  San Francisco, United States, March 2014,
-  paper WECOBA02, pp. 1000-1003
+V. Vuppala \emph{et al.},
+"Distributed Information Services for Control Systems",
+in \emph{Proc. ICALEPCS'2013},
+San Francisco, United States, March 2014,
+paper WECOBA02, pp. 1000-1003
 
 \end{thebibliography}
 
