--- a/pcapac16/WEPOPRPO22_hla/Poster/WEPOPRPO22poster.tex
+++ b/pcapac16/WEPOPRPO22_hla/Poster/WEPOPRPO22poster.tex
@@ -54,14 +54,13 @@
 					\end{myblock}
 					\begin{myblock}{Top-up Injection}
 						\textbf{Implemented functionalities}
-						%\begin{itemize}
-							%\item \textbf{}.
-							%\item \textbf{}.
-						%\end{itemize}
+						\begin{itemize}
+							\item \textbf{Top-up Client Application:} Current and filling pattern display, injection mode selection, maximum current and maximum current decay adjustment.
+						\end{itemize}
 						\vspace{0.5cm}
 						\begin{figure}
 							\centering
-							\includegraphics[width=0.7\textwidth]{../WEPOPRPO22f4.png}
+							\includegraphics[width=0.684\textwidth]{../WEPOPRPO22f4.png}
 							\caption{Top-up injection display application developed with PyQt.}
 						\end{figure}
 					\end{myblock}\vfill
