--- a/pcapac16/WEPOPRPO22_hla/topup.tex
+++ b/pcapac16/WEPOPRPO22_hla/topup.tex
@@ -6,7 +6,7 @@ A simplified version of this HLA was developed to test the simulation of the inj
 It consists in a PyQt application that monitors the beam current in the storage ring and starts the injection cycle
 in order to mantain the current level within the desired tolerance. The connection between 
 the Channel Access protocol and the Python language was done with the PyEpics package~\cite{pyepics}.
-The user interface contains a display of the beam current over time and the fill pattern in the storage ring, as shown in Figure \ref{fig:topup}.
+The user interface contains a display of the beam current over time and the fill pattern in the storage ring, as shown in Fig. \ref{fig:topup}.
 
 In order to include this application in the Sirius control system several functionalities must be added. For example, in this version it is only possible to 
 choose between multi-bunch or single-bunch injection mode, however, as the timing system will support the injection to any bucket, 
